--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "@types/jquery": "3.5.14",
+    "@types/postcss-preset-env": "6.7.3",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
+    "autoprefixer": "10.4.4",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "10.2.4",
     "cross-env": "7.0.3",
@@ -32,7 +34,10 @@
     "html-webpack-plugin": "5.5.0",
     "less-loader": "10.2.0",
     "mini-css-extract-plugin": "2.6.0",
+    "postcss": "8.4.12",
     "postcss-less": "6.0.0",
+    "postcss-loader": "6.2.1",
+    "postcss-preset-env": "7.4.3",
     "style-loader": "3.3.1",
     "stylelint": "14.6.1",
     "stylelint-config-standard": "25.0.0",
