--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-env": "7.0.3",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "3.4.1",
+    "cssnano": "5.1.7",
     "eslint": "8.12.0",
     "eslint-plugin-eslint-plugin": "4.1.0",
     "eslint-plugin-import": "2.25.4",
